--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class = "bg"></div>
             <nav class="navbar">
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="Home.html">Home</a></li>
+                    <li role="presentation" class="active"><a href="index.html">Home</a></li>
                     <li role="presentation"><a href="PaperPage.html">Paper</a></li>
                     <li role="presentation"><a href="Project.html">Project</a></li>
                     <li role="presentation"><a href="Future.html">Future Development</a></li>
